# wallace-minion

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  shuttle_prebuild.sh
.cargo/: config.toml
dep-installer-hack/: Cargo.toml  Shuttle.toml  build.rs
dep-installer-hack/src/: main.rs
entity/: Cargo.toml
entity/src/entities/: bank_account.rs  channel.rs  guild.rs  lol_account.rs  mod.rs  prelude.rs  rn_object.rs  rn_subject.rs  task.rs  user.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20230127_000001_start.rs  m20230202_231652_mature_user.rs  m20230210_221603_random_name.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/0_init/: migration.sql
prisma/migrations/20230212022055_drop_seaql/: migration.sql
prisma/migrations/20230214013402_reverse_user_bank_account_fk/: migration.sql
prisma/migrations/20240514164332_lol_account_riot_id/: migration.sql
src/: cool_text.rs  database.rs  discord.rs  json_store.rs  lib.rs  main.rs  model.rs  riot_api.rs  set_store.rs  seven_tv.rs
src/commands/: ai_voice.rs  bank.rs  cooltext.rs  emote.rs  general.rs  mod.rs  riot.rs  scheduling.rs  spells.rs  voice.rs
src/services/: cool_text.rs  mod.rs  polly.rs  riot_api.rs  seven_tv.rs
