[package]
name = "wallace-minion"
version = "0.12.3"
edition = "2021"

[workspace]
members = [".", "prisma-cli"]
exclude = ["dep-installer-hack"]

[dependencies]
anyhow = "1"
async-openai = "0.18"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-comprehend = "1"
aws-sdk-polly = "1"
aws-types = "1"
base64 = "0.21"
chrono = { version = "0.4.28", default-features = false }
cron = "0.12"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls"] }
riven = { version = "2.28", default-features = false, features = ["rustls-tls"] }
serde = "1"
serde_json = "1"
serenity = { version = "0.12.0", default-features = false, features = [
    "cache",
    "chrono",
    "gateway",
    "rustls_backend",
    "standard_framework",
    "voice",
] }
shuttle-runtime = "0.38.0"
shuttle-secrets = "0.38.0"
songbird = { version = "0.4.0", features = ["builtin-queue"] }
sqlx = { version = "0.7.3", default-features = false, features = ["macros", "postgres", "runtime-tokio", "tls-rustls"] }
strum = { version = "0.25", features = ["derive"] }
symphonia = { version = "0.5.3", default-features = false, features = ["mp3"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[workspace.dependencies.prisma-client-rust-cli]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.11"
default-features = false
features = ["postgresql"]
