[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.10", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
