[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-cli = { tag = "0.6.5", git = "https://github.com/Brendonovich/prisma-client-rust", default-features = false, features = [
    "postgresql",
] }
